samples/_failures_safe/1761367824_6e4d66_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b56ef3be.c: In function ‘main’:
./samples/SAFE/__tmp_b56ef3be.c:134:12: error: missing terminating " character
  134 |     printf("\nFirst
      |            ^~~~~~~~
./samples/SAFE/__tmp_b56ef3be.c:134:5: error: expected expression at end of input
  134 |     printf("\nFirst
      |     ^~~~~~
./samples/SAFE/__tmp_b56ef3be.c:134:5: error: expected declaration or statement at end of input
